# CS2640-Final-Project

./: .gitignore  AI_USAGE_REPORT.md  CHECKPOINT.md  CMakeLists.txt  Doxyfile  IMPLEMENTATION_DETAILS.md  PROPOSAL.md  README.md  final_report.tex  profile.py
auto/: report.el
benchmarks/: kv_benchmark.cpp
docs/: IMPLEMENTATION_OVERVIEW.md
experiments/: baseline_clients.csv
include/kvstore/: kv_store.hpp  rdma_store.hpp
include/net/: event_loop.hpp  rdma_context.hpp  socket_utils.hpp
include/protocol/: text_protocol.hpp
scripts/: convert_md_to_docx.sh  experiment_cpu.sh  measure_cpu.py  plot_all_results.sh  run_one_sided_rdma_experiments.sh  run_tcp_experiments.sh  run_two_sided_rdma_experiments.sh
src/client/: main.cpp  rdma_client.cpp
src/kvstore/: kv_store.cpp  rdma_store.cpp
src/net/: event_loop.cpp  rdma_context.cpp  socket_utils.cpp
src/protocol/: text_protocol.cpp
src/server/: main.cpp  rdma_main.cpp
tests/: kv_store_concurrency_test.cpp  kv_store_test.cpp  protocol_test.cpp
